--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
         <span>H</span>
         <span>A</span>
         <span>L</span>
-        <span>L</span>
         <span>O</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
+        <span>Klik tombol dibawah ini yaaa</span>
     </div>
     <div class="button">
         <button>
